--- a/home/templates/home/navbar.html
+++ b/home/templates/home/navbar.html
@@ -11,6 +11,18 @@
                 <a class="nav-link" href="{% url 'home' %}">{% trans "Home" %}</a>
             </li>
             <!-- Add other navigation links here -->
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">{% trans "Logout" %}</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">{% trans "Login" %}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'register' %}">{% trans "Register" %}</a>
+            </li>
+            {% endif %}
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
