--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -6,14 +6,13 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 offset-md-3">
-        <h2 class="text-center">{% trans "Register" %}</h2>
+        <h2 class="text-center">{% trans "Login" %}</h2>
         <form method="POST">
           {% csrf_token %}
           {{ form|crispy }}
-          <button type="submit" class="btn btn-primary btn-block">{% trans "Register" %}</button>
+          <button type="submit" class="btn btn-primary btn-block">{% trans "Login" %}</button>
         </form>
       </div>
     </div>
   </div>
 {% endblock %}
-gi
