--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -4,6 +4,6 @@
 {% block content %}
   <div class="container">
     <h2>{% trans "Password Reset Sent" %}</h2>
-    <p>{% trans "An email has been sent with instructions for resetting your password." %}</p>
+    <p>{% trans "If your account exists, an Email has been sent with instructions for resetting your password." %}</p>
   </div>
 {% endblock %}
