--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -18,19 +18,45 @@
 <body>
     {% include 'home/navbar.html' %}
 
+    <!--  MESSAGES -->
+    {% if messages %}
+    <div class="messages">
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+    <!--  MESSAGES END  -->
 
-    {% block content %}{% endblock %}
+    <div class="container mt-5">
+        {% block content %}{% endblock %}
+    </div>
 
 
     {% include 'home/footer.html' %}
 
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>-->
+    <script>
+        // Set a timeout for all alerts to automatically fade out after 4 seconds (4000 milliseconds)
+        setTimeout(function() {
+            $('.alert').fadeOut('slow');
+        }, 4000);
+    </script>
     <script>
         const toggleDarkMode = () => {
             document.body.classList.toggle('dark-mode');
         }
     </script>
+    <!-- Additional Bootstrap JS for Navbar and Dropdown -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
