created models, and growth models methods

--- a/home/templates/home/footer.html
+++ b/home/templates/home/footer.html
@@ -2,16 +2,16 @@
 
 {% load i18n %}
 
-<footer class="bg-light text-center text-lg-start">
-    <div class="container p-4">
+<footer>
+    <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+            <div class="col-lg-12">
                 <h5 class="text-uppercase">{% trans "About" %}</h5>
                 <p>
                     {% trans "Riskhunters is a platform that helps gamblers assess and plan risk management." %}
                 </p>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <div class="col-lg-4">
                 <h5 class="text-uppercase">{% trans "Links" %}</h5>
                 <ul class="list-unstyled mb-0">
                     <li>
@@ -20,7 +20,7 @@
                     <!-- Add other footer links here -->
                 </ul>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <div class="col-lg-4">
                 <h5 class="text-uppercase mb-0">{% trans "Contact" %}</h5>
                 <ul class="list-unstyled">
                     <li>
@@ -28,9 +28,12 @@
                     </li>
                 </ul>
             </div>
+            <div class="col-lg-4">
+                <div class="col-lg-12">
+                    <p>Copyright © 2023  <a href="#">Riskhunters</a>. All rights reserved.
+                </div>
+            </div>
         </div>
     </div>
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2023 Riskhunters
-    </div>
 </footer>
+
