--- a/home/templates/home/navbar.html
+++ b/home/templates/home/navbar.html
@@ -1,46 +1,100 @@
 <!-- templates/navbar.html -->
-{% load i18n %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% url 'home' %}">{% trans "Riskhunters" %}</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'home' %}">{% trans "Home" %}</a>
-            </li>
-            <!-- Add other navigation links here -->
-            {% if user.is_authenticated %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">{% trans "Logout" %}</a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">{% trans "Login" %}</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'register' %}">{% trans "Register" %}</a>
-            </li>
-            {% endif %}
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    {% trans "Language" %}
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="?lang=en">{% trans "English" %}</a>
-                    <a class="dropdown-item" href="?lang=fr">{% trans "French" %}</a>
-                    <a class="dropdown-item" href="?lang=es">{% trans "Spanish" %}</a>
-                    <a class="dropdown-item" href="?lang=pt">{% trans "Portuguese" %}</a>
-                    <a class="dropdown-item" href="?lang=ru">{% trans "Russian" %}</a>
-                    <a class="dropdown-item" href="?lang=de">{% trans "German" %}</a>
-                    <a class="dropdown-item" href="?lang=tr">{% trans "Turkish" %}</a>
-                </div>
-            </li>
-
-            <li class="nav-item">
-                <button class="btn btn-outline-secondary" onclick="toggleDarkMode()">{% trans "Toggle Dark Mode" %}</button>
-            </li>
-        </ul>
+{% load i18n static %}
+<!-- ***** Header Area Start ***** -->
+<header class="header-area header-sticky">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <nav class="main-nav">
+                    <!-- ***** Logo Start ***** -->
+                    <a href="{% url 'home' %}" class="logo">
+                        <img src="{% static 'img/logo.png' %}"    alt="Logo">
+                    </a>
+                    <!-- ***** Logo End ***** -->
+                    <!-- ***** Search End ***** -->
+                    <div class="search-input">
+                        <form id="search" action="#">
+                            <input type="text" placeholder="Type Something" id='searchText' name="searchKeyword" onkeypress="handle" />
+                            <i class="fa fa-search"></i>
+                        </form>
+                    </div>
+                    <!-- ***** Search End ***** -->
+                    <!-- ***** Menu Start ***** -->
+                    <ul class="nav">
+                        <li><a href="{% url 'home' %}" class="active">{% trans "Home" %}</a></li>
+                        <li><a href="browse.html">{% trans "Browse" %}</a></li>
+                        <li><a href="details.html">{% trans "Details" %}</a></li>
+                        <li><a href="streams.html">{% trans "Streams" %}</a></li>
+                        <li><a href="profile.html"><i class="fa fa-user"></i>{% trans "Profile" %}</a></li>
+                        <!-- Include the modal trigger button here -->
+                        <li class="nav-link dropdown language">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#setLang" aria-haspopup="true" aria-expanded="false">
+                                <i class="fa fa-globe" style="font-size:15x;color:#DF9F28"></i> {% trans 'language' %}
+                            </button>
+                        </li>
+                    </ul>
+                    <a class='menu-trigger'>
+                        <span>Menu</span>
+                    </a>
+                    <!-- ***** Menu End ***** -->
+                </nav>
+            </div>
+        </div>
     </div>
-</nav>
+</header>
+<!-- ***** Header Area End ***** -->
+
+<div class="modal fade" id="setLang" tabindex="-1" role="dialog" aria-labelledby="setLangLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content dark-mode">
+            <div class="modal-header">
+                <i class="fa fa-globe" style="font-size:30px;color:#DF9F28"></i>
+                <i class="fa fa-globe" style="font-size:30px;color:#37517e"></i>
+                <i class="fa fa-globe" style="font-size:30px;color:#DF9F28"></i>
+                <i class="fa fa-globe" style="font-size:30px;color:#37517e"></i>
+                <i class="fa fa-globe" style="font-size:30px;color:#DF9F28"></i>
+                <i class="fa fa-globe" style="font-size:30px;color:#37517e"></i>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="d-grid gap-2 col-6 mx-auto" style="align:center;">
+                    {% get_current_language as LANGUAGE_CODE %}
+                    {% get_available_languages as LANGUAGES %}
+                    {% get_language_info_list for LANGUAGES as languages %}
+
+                    {% for lang in languages %}
+                    <form action="/i18n/setlang/" method="POST">
+                        {% csrf_token %}
+                        <input name="next" type="hidden" value="{{ redirect_to }}">
+                        {% if lang.code == 'en'%}
+                        <input name="language" type="hidden" value="{{ lang.code }}">
+                        <a class="dropdown-item">
+                            <button style="width:100%;" class="btn btn-secondary-soft" type="submit">
+                                <span class="flag-icon flag-icon-us"></span>   <b>{{ lang.name_local }}</b>
+                            </button>
+                        </a>
+                        {% else %}
+                        <input name="language" type="hidden" value="{{ lang.code }}">
+                        <a class="dropdown-item">
+                            <button style="width:100%;" class="btn btn-secondary-soft" type="submit">
+                                <span class="flag-icon flag-icon-{{ lang.code }}"></span>  <b>{{ lang.name_local }}</b>
+                            </button>
+                        </a>
+                        {% endif%}
+
+                    </form>
+                    {% endfor %}
+
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{% trans 'Cancel' %}</button>
+            </div>
+        </div>
+    </div>
+</div>
