--- a/home/templates/home/navbar.html
+++ b/home/templates/home/navbar.html
@@ -23,9 +23,8 @@
                     <ul class="nav">
                         <li><a href="{% url 'home' %}" class="active">{% trans "Home" %}</a></li>
                         <li><a href="browse.html">{% trans "Browse" %}</a></li>
-                        <li><a href="details.html">{% trans "Details" %}</a></li>
-                        <li><a href="streams.html">{% trans "Streams" %}</a></li>
                         <li><a href="profile.html"><i class="fa fa-user"></i>{% trans "Profile" %}</a></li>
+                        <li><a href="#" id="theme-toggle-button"><i class="fa fa-adjust"></i></a></li>
                         <!-- Include the modal trigger button here -->
                         <li class="nav-link dropdown language">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
