--- a/home/templates/home/section1.html
+++ b/home/templates/home/section1.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!-- ***** Most Popular Start ***** -->
 <div class="most-popular">
     <div class="row">
@@ -8,7 +10,7 @@
             <div class="row">
                 <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                        <img alt="" src="assets/images/popular-01.jpg">
+                        <img alt="" src="{% static 'img/popular-01.jpg'%}">
                         <h4>Fortnite<br><span>Sandbox</span></h4>
                         <ul>
                             <li><i class="fa fa-star"></i> 4.8</li>
@@ -18,7 +20,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                        <img alt="" src="assets/images/popular-02.jpg">
+                        <img alt="" src="{% static 'img/popular-02.jpg'%}">
                         <h4>PubG<br><span>Battle S</span></h4>
                         <ul>
                             <li><i class="fa fa-star"></i> 4.8</li>
@@ -28,7 +30,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                        <img alt="" src="assets/images/popular-03.jpg">
+                        <img alt="" src="{% static 'img/popular-03.jpg'%}">
                         <h4>Dota2<br><span>Steam-X</span></h4>
                         <ul>
                             <li><i class="fa fa-star"></i> 4.8</li>
@@ -38,7 +40,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                        <img alt="" src="assets/images/popular-04.jpg">
+                        <img alt="" src="{% static 'img/popular-04.jpg'%}">
                         <h4>CS-GO<br><span>Legendary</span></h4>
                         <ul>
                             <li><i class="fa fa-star"></i> 4.8</li>
@@ -51,7 +53,7 @@
                         <div class="row">
                             <div class="col-lg-6 col-sm-6">
                                 <div class="item inner-item">
-                                    <img alt="" src="assets/images/popular-05.jpg">
+                                    <img alt="" src="{% static 'img/popular-05.jpg'%}">
                                     <h4>Mini Craft<br><span>Legendary</span></h4>
                                     <ul>
                                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -61,7 +63,7 @@
                             </div>
                             <div class="col-lg-6 col-sm-6">
                                 <div class="item">
-                                    <img alt="" src="assets/images/popular-06.jpg">
+                                    <img alt="" src="{% static 'img/popular-06.jpg'%}">
                                     <h4>Eagles Fly<br><span>Matrix Games</span></h4>
                                     <ul>
                                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -74,7 +76,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                        <img alt="" src="assets/images/popular-07.jpg">
+                        <img alt="" src="{% static 'img/popular-07.jpg'%}">
                         <h4>Warface<br><span>Max 3D</span></h4>
                         <ul>
                             <li><i class="fa fa-star"></i> 4.8</li>
@@ -84,7 +86,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                        <img alt="" src="assets/images/popular-08.jpg">
+                        <img alt="" src="{% static 'img/popular-08.jpg'%}">
                         <h4>Warcraft<br><span>Legend</span></h4>
                         <ul>
                             <li><i class="fa fa-star"></i> 4.8</li>
