--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -19,15 +19,17 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/css/bootstrap-select.min.css" rel="stylesheet">
 
     <!-- Favicons -->
-    <link href="{% static 'img/favicon.png' %}"          rel="icon">
+    <link href="{% static 'img/favicon.ico' %}"          rel="icon">
     <link href="{% static 'img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
     <!-- Template Main CSS File -->
-    <link href="{% static 'css/css.css' %}"         rel="stylesheet" type="text/css">
+    <link href="{% static 'css/css2.css' %}"         rel="stylesheet" type="text/css">
     <link href="{% static 'css/fontawesome.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/owl.css' %}"         rel="stylesheet" type="text/css">
     <link href="{% static 'css/animate.css' %}"     rel="stylesheet" type="text/css">
     <link rel="stylesheet"  href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+
+
 
 
     <style>
@@ -54,17 +56,18 @@
     {% endif %}
     <!--  MESSAGES END  -->
 
-    <div class="container mt-5">
-        {% block content %}{% endblock %}
-    </div>
+
       <div class="container">
     <div class="row">
       <div class="col-lg-12">
         <div class="page-content">
-
           <!-- ***** Banner Start ***** -->
             {% include 'home/banner.html' %}
           <!-- ***** Banner End ***** -->
+
+            <div class="container mt-5">
+                {% block content %}{% endblock %}
+            </div>
 
           <!-- ***** Most Popular Start ***** -->
             {% include 'home/section2.html' %}
@@ -74,50 +77,7 @@
             {% include 'home/section1.html' %}
           <!-- ***** Most Popular End ***** -->
 
-          <!-- ***** Gaming Library Start ***** -->
-          <div class="gaming-library">
-            <div class="col-lg-12">
-              <div class="heading-section">
-                <h4><em>Your Gaming</em> Library</h4>
-              </div>
-              <div class="item">
-                <ul>
-                  <li><img src="assets/images/game-01.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>Dota 2</h4><span>Sandbox</span></li>
-                  <li><h4>Date Added</h4><span>24/08/2036</span></li>
-                  <li><h4>Hours Played</h4><span>634 H 22 Mins</span></li>
-                  <li><h4>Currently</h4><span>Downloaded</span></li>
-                  <li><div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div></li>
-                </ul>
-              </div>
-              <div class="item">
-                <ul>
-                  <li><img src="assets/images/game-02.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>Fortnite</h4><span>Sandbox</span></li>
-                  <li><h4>Date Added</h4><span>22/06/2036</span></li>
-                  <li><h4>Hours Played</h4><span>740 H 52 Mins</span></li>
-                  <li><h4>Currently</h4><span>Downloaded</span></li>
-                  <li><div class="main-border-button"><a href="#">Donwload</a></div></li>
-                </ul>
-              </div>
-              <div class="item last-item">
-                <ul>
-                  <li><img src="assets/images/game-03.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>CS-GO</h4><span>Sandbox</span></li>
-                  <li><h4>Date Added</h4><span>21/04/2036</span></li>
-                  <li><h4>Hours Played</h4><span>892 H 14 Mins</span></li>
-                  <li><h4>Currently</h4><span>Downloaded</span></li>
-                  <li><div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-12">
-              <div class="main-button">
-                <a href="profile.html">View Your Library</a>
-              </div>
-            </div>
-          </div>
-          <!-- ***** Gaming Library End ***** -->
+
         </div>
       </div>
     </div>
@@ -131,6 +91,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+
+    <script src="{% static 'js/main.js' %}"></script>
+
+
 
 <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>-->
     <script>
