--- a/home/templates/home/section2.html
+++ b/home/templates/home/section2.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- ***** Featured Games Start ***** -->
 <div class="row">
     <div class="col-lg-8">
@@ -8,7 +9,7 @@
             <div class="owl-features owl-carousel">
                 <div class="item">
                     <div class="thumb">
-                        <img alt="" src="assets/images/featured-01.jpg">
+                        <img alt="" src="{% static 'img/featured-01.jpg'%}">
                         <div class="hover-effect">
                             <h6>2.4K Streaming</h6>
                         </div>
@@ -21,7 +22,7 @@
                 </div>
                 <div class="item">
                     <div class="thumb">
-                        <img alt="" src="assets/images/featured-02.jpg">
+                        <img alt="" src="{% static 'img/featured-02.jpg'%}">
                         <div class="hover-effect">
                             <h6>2.4K Streaming</h6>
                         </div>
@@ -34,7 +35,7 @@
                 </div>
                 <div class="item">
                     <div class="thumb">
-                        <img alt="" src="assets/images/featured-03.jpg">
+                        <img alt="" src="{% static 'img/featured-03.jpg'%}">
                         <div class="hover-effect">
                             <h6>2.4K Streaming</h6>
                         </div>
@@ -47,7 +48,7 @@
                 </div>
                 <div class="item">
                     <div class="thumb">
-                        <img alt="" src="assets/images/featured-01.jpg">
+                        <img alt="" src="{% static 'img/featured-01.jpg'%}">
                         <div class="hover-effect">
                             <h6>2.4K Streaming</h6>
                         </div>
@@ -60,7 +61,7 @@
                 </div>
                 <div class="item">
                     <div class="thumb">
-                        <img alt="" src="assets/images/featured-02.jpg">
+                        <img alt="" src="{% static 'img/featured-02.jpg'%}">
                         <div class="hover-effect">
                             <h6>2.4K Streaming</h6>
                         </div>
@@ -73,7 +74,7 @@
                 </div>
                 <div class="item">
                     <div class="thumb">
-                        <img alt="" src="assets/images/featured-03.jpg">
+                        <img alt="" src="{% static 'img/featured-03.jpg'%}">
                         <div class="hover-effect">
                             <h6>2.4K Streaming</h6>
                         </div>
@@ -94,7 +95,7 @@
             </div>
             <ul>
                 <li>
-                    <img alt="" class="templatemo-item" src="assets/images/game-01.jpg">
+                    <img alt="" class="templatemo-item" src="{% static 'img/game-01.jpg'%}">
                     <h4>Fortnite</h4>
                     <h6>Sandbox</h6>
                     <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
@@ -104,7 +105,7 @@
                     </div>
                 </li>
                 <li>
-                    <img alt="" class="templatemo-item" src="assets/images/game-02.jpg">
+                    <img alt="" class="templatemo-item" src="{% static 'img/game-02.jpg'%}">
                     <h4>CS-GO</h4>
                     <h6>Legendary</h6>
                     <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
@@ -114,7 +115,7 @@
                     </div>
                 </li>
                 <li>
-                    <img alt="" class="templatemo-item" src="assets/images/game-03.jpg">
+                    <img alt="" class="templatemo-item" src="{% static 'img/game-03.jpg'%}">
                     <h4>PugG</h4>
                     <h6>Battle Royale</h6>
                     <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
