--- a/static/css/css.css
+++ b/static/css/css.css
@@ -1,10 +1,3 @@
-/*
-
-TemplateMo 579 Cyborg Gaming
-
-https://templatemo.com/tm-579-cyborg-gaming
-
-*/
 
 /* ---------------------------------------------
 Table of contents
@@ -773,7 +766,7 @@ Banner Style
 */
 
 .main-banner {
-  background-image: url(../images/banner-bg.jpg);
+  background-image: url(../img/banner-bg.jpg);
   background-position: center center;
   background-size: cover;
   min-height: 380px;
